# poetry self add poetry-bumpversion

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool]

[tool.black]
line-length = 120
target-version = ['py39']

[tool.flake8]
ignore = "W605,"
max-complexity = 18
max-line-length = 120

[tool.isort]
profile = "black"

[tool.mypy]
pretty = true
python_version = "3.9"
show_error_codes = true
strict = true

[tool.poetry]
authors = ["eggplants <w10776e8w@yahoo.co.jp>"]
license = "MIT"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: Implementation :: CPython"
]
description = "Get your Pixiv token (for running upbit/pixivpy)"
keywords = ["pixiv", "token"]
name = "gppt"
packages = [{include = "gppt"}]
readme = "README.md"
repository = "https://github.com/eggplants/get-pixivpy-token"
version = "3.1.0"

[tool.poetry.dependencies]
python = ">=3.8.1,<4"
pixivpy3 = "^3.7.2"
pwinput = "^1.0.2"
requests = "^2.28.2"
types-requests = "^2.28.11.8"
types-selenium = "^3.141.9"
auto-selenium = "^1.0.1"

[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
pre-commit = "^2.20.0"
pyproject-flake8 = "^6.0.0.post1"
pytest = "^7.2.0"
taskipy = "^1.10.3"

[tool.poetry.scripts]
gppt = 'gppt.main:main'

[tool.poetry_bumpversion.file."gppt/__init__.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.taskipy.tasks]
lint = "pre-commit run --all-files"
profile = "python -m cProfile"
